--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Antic+Slab|Oxygen:400,700);
 
 body {
-	padding-top: 50px;
 	font-family: Oxygen, serif;
 	font-weight: 400;
 	font-size: 1.8em;
@@ -21,18 +20,168 @@ img {
 	width: 100%;
 }
 
-.navbar {
-	border-radius: 0;
-	border: 0;
+
+
+/** Header Navigation **/
+
+header .navbar {
+	padding: 30px 0;
+	transition: all .5s ease-out;
 }
 
-footer {
-	background-color: #ECECEC;
+header .navbar-default {
+	background-color: transparent;
+	border: none;
 }
 
-footer p {
-	text-align: center;
+header .navbar-default .navbar-nav a {
+	color: white;
+	padding: 5px 8px;
 }
+
+header .navbar-default .navbar-nav a:hover {
+	color: #A9CAAE;
+}
+
+header .navbar-default .navbar-nav .active a {
+	font-weight: 700;
+	color: #A9CAAE;
+	background: transparent;
+	border-bottom: 4px solid #A9CAAE;
+	text-shadow: none;
+}
+
+header .navbar-default .navbar-nav .active a:hover {
+	color: #4DDC5F;
+	background: transparent;
+	text-shadow: none;
+}
+
+
+/** Navbar Brand **/
+
+header .navbar-brand {
+	background: url(../images/house-logo.svg);
+	background-repeat: no-repeat;
+	background-position: 38px 0;
+	height: auto;
+}
+
+header .navbar-brand h1 {
+	color: white;
+	margin: 0;
+	font-size: 1.6em;
+	font-weight: 400;
+	padding-left: 105px;
+}
+
+header .navbar-brand span.subhead {
+	display: block;
+	font-family: "Antic Slab", serif;
+	font-size: .6em;
+}
+
+
+
+/** Navbar Toggle **/
+
+header .navbar-toggle {
+	background-color: #279182;
+}
+
+header .navbar-default .navbar-toggle .icon-bar {
+	background-color: white;
+}
+
+@media only screen and (max-width: 768px) {
+	header .navbar-collapse {
+		background-color: rgba(30,90,46, .6);
+	}
+}
+
+
+
+/** nav inbody **/
+
+header .inbody {
+	background: rgba(104,73,49,.9);
+}
+
+header .navbar.inbody {
+	padding-top: 0;
+	padding-bottom: 0;
+}
+
+header .navbar.inbody .navbar-nav {
+	padding-top: 10px;
+}
+
+header .inbody .navbar-brand {
+	background-size: 43px;
+	background-position: top left;
+	margin-top: 5px;
+	padding-bottom: 0;
+	margin-left: 10px;
+}
+
+header .inbody .navbar-brand h1 {
+	font-size: 1.1em;
+	padding-left: 38px;
+}
+
+header .inbody .navbar-brand span.subhead {
+	display: none;
+}
+
+
+/** Carousel Fade **/
+
+.carousel.fade {
+	opacity: 1;
+}
+
+.carousel.fade .item {
+	transition: opacity ease-out .7s;
+	left: 0;
+	opacity: 0;
+	top: 0;
+	position: absolute;
+	width: 100%;
+	display: block;
+}
+
+.carousel.fade .item:first-child {
+	top: auto;
+	opacity: 0;
+	position: relative;
+}
+
+.carousel.fade .item.active {
+	opacity: 1;
+}
+
+.carousel-control {
+	opacity: 0;
+}
+
+.carousel-control.right, .carousel-control.left {
+	background-image: none;
+	transition: opacity ease-out .4s;
+}
+
+.carousel-control.right:hover, .carousel-control.left:hover {
+	transition: opacity ease-out .4s;
+}
+
+#featured .item {
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center center;
+	width: 100%;
+	height: 100%;
+}
+
+/** Page **/
 
 .page {
 	padding: 50px 0;
@@ -41,4 +190,58 @@ footer p {
 .page h2 {
 	text-align: center;
 	margin: 30px;
+}
+
+.page img {
+	max-width: 100%;
+}
+
+/** Page: About **/
+#about {
+	background-color: #E4D29D;
+	background-image: linear-gradient(to bottom, #EEF08A, #819A2D);
+	border-top: 20px solid rgba(238, 200, 86, .5);
+}
+
+/** Page: Park **/
+#park  {
+
+}
+
+/** Page: Nearby **/
+#nearby {
+	
+}
+
+/** Page: For Sale **/
+#forsale  {
+
+}
+
+/** Page: Residents **/
+#residents {
+	
+}
+
+
+
+/** Footer **/
+
+footer {
+	background: #586D74;
+	color: white;
+	font-size: .8em;
+	padding: 40px 0 40px 0;
+}
+
+footer a {
+	color: #E0E6AE;
+}
+
+footer a:hover {
+	color: #3EEC856 !important;
+}
+
+footer p {
+	text-align: center;
 }
