--- a/css/style.css
+++ b/css/style.css
@@ -238,10 +238,32 @@ header .inbody .navbar-brand span.subhead {
 #map {
 	width: 100%;
 	height: 100%;
+	border-radius: 15px;
+}
+
+#locations-list {
+	border-radius: 7px;
+    padding: 20px 20px 15px 22px;
+    background-color: white;
 }
 
 .location {
 	cursor: pointer;
+	margin-bottom: 10px;
+}
+
+.location.active h4 {
+	color: #F7534B;
+	font-weight: 700;
+}
+.location.active .location-label {
+	font-size: 20px;
+}
+
+#locations-detail {
+	border-radius: 7px;
+    padding: 15px 20px;
+    background-color: white;
 }
 
 
