--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ header .navbar-default {
 
 header .navbar-default .navbar-nav a {
 	color: white;
+	text-shadow: 0 0 6px #000;
 	padding: 5px 8px;
 }
 
@@ -41,14 +42,13 @@ header .navbar-default .navbar-nav .active a {
 	font-weight: 700;
 	color: #A9CAAE;
 	background: transparent;
-	border-bottom: 4px solid #A9CAAE;
-	text-shadow: none;
+	border-bottom: 2px solid #A9CAAE;
+	padding-bottom: 2px;
 }
 
 header .navbar-default .navbar-nav .active a:hover {
 	color: #4DDC5F;
 	background: transparent;
-	text-shadow: none;
 }
 
 
@@ -79,7 +79,7 @@ header .navbar-brand span.subhead {
 	background-image: url('../images/carousel-sign.jpg');
 	background-size: cover;
 	background-repeat: no-repeat;
-	background-position: 70% center;
+	background-position: 70% 0;
 	width: 100%;
 	height: 100%;
 }
@@ -223,6 +223,12 @@ header .inbody .navbar-brand span.subhead {
 	border-top: 20px solid rgba(238, 200, 86, .5);
 }
 
+.shadow {
+  -moz-box-shadow:    0 0 21px 2px #ccc;
+  -webkit-box-shadow: 0 0 21px 2px #ccc;
+  box-shadow:         0 0 21px 2px #ccc;
+}
+
 
 /** Page: Nearby **/
 #nearby {
@@ -289,6 +295,38 @@ header .inbody .navbar-brand span.subhead {
 }
 
 
+/** Page: For Sale **/
+
+#forsale img {
+	width: 100%;
+	border-radius: 20px;	
+}
+
+
+/** Page: Residents **/
+
+#residents {
+	background-image: url("../images/carousel-woods.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+#residents .jumbotron {
+	background-color: rgba(238, 238, 238, 0.88);
+}
+
+#residents .jumbotron h2 {
+	text-align: left;
+	margin: 0 0 15px 0;
+}
+
+#residents .jumbotron p {
+	font-size: 18px;
+}
+
+#residents img {
+	width: 100%;	
+}
 
 /** Footer **/
 
