--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,9 @@ header .navbar-brand span.subhead {
 	font-size: .6em;
 }
 
+/** Header Image or Video **/
+
+/* Use this if just using an image instead of video
 #headerimage {
 	background-image: url('../images/carousel-sign.jpg');
 	background-size: cover;
@@ -82,7 +85,44 @@ header .navbar-brand span.subhead {
 	background-position: 70% 0;
 	width: 100%;
 	height: 100%;
+} */
+
+#headerimage {
+	position: relative;
+    overflow: hidden;
+    width:100vw;
+    height:33vh;
+    max-height:33vh;
 }
+
+.video-container {
+	position:absolute;
+    height:100%;
+    width:200%;
+    left:-50%;
+}
+
+video {
+	position:absolute;
+    top: -99999px;
+    bottom: -99999px;
+    left: -99999px;
+    right: -99999px;
+    margin: auto;
+    min-height:100%;
+    min-width:50%;
+}
+
+@media screen and (max-width: 768px){
+	video {
+		display:none;
+	}
+	.video-container {
+		background: url(../images/carousel-woods.jpg) #000 no-repeat center 100%;
+		background-size: cover;
+	}
+}
+
 
 
 
@@ -96,7 +136,7 @@ header .navbar-default .navbar-toggle .icon-bar {
 	background-color: white;
 }
 
-@media only screen and (max-width: 768px) {
+@media screen and (max-width: 768px) {
 	header .navbar-collapse {
 		background-color: rgba(30,90,46, .6);
 	}
