--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ h1,h2,h3,h4,h5,h6 {
 	font-family: "Antic Slab", serif;
 	font-weight: 400;
 	margin: 0;
+	color: #F7534B;
 }
 
 
@@ -255,7 +256,8 @@ header .inbody .navbar-brand span.subhead {
 /** Page **/
 
 .page {
-	padding: 50px 0;
+	padding: 80px 0;
+	background-color: #FFFDF4;
 }
 
 .page h2 {
@@ -267,11 +269,21 @@ header .inbody .navbar-brand span.subhead {
 	margin: 20px;
 }
 
+.btn-primary {
+	background-color: #F7534B;
+	border-color: transparent;
+}
+.btn-primary:hover {
+    color: #fff;
+    background-color: #E6463D;
+    border-color: transparent;
+}
+
 /** Page: About **/
 #about {
-	background-color: #E4D29D;
-	background-image: linear-gradient(to bottom, #EEF08A, #819A2D);
-	border-top: 20px solid rgba(238, 200, 86, .5);
+	background-color: #FFF0B8;
+/* 	background-image: linear-gradient(to bottom, #EEF08A, #819A2D); */
+	border-top: 20px solid #F7534B;
 }
 
 .shadow {
@@ -329,11 +341,20 @@ header .inbody .navbar-brand span.subhead {
 .location {
 	cursor: pointer;
 	margin-bottom: 10px;
+	color: #F7625A;
+}
+.location:hover {
+	color: #E6463D;
+	text-decoration: underline;
 }
 
 .location.active {
 	color: #F7534B;
 	font-weight: 700;
+	font-size: 1.2em;
+}
+.location.active h4 {
+	font-size: 1em;
 }
 
 #locations-detail h3 {
@@ -443,6 +464,10 @@ footer p {
 
 @media (max-width: 768px) {
 	
+	.page {
+		padding: 50px 0;
+	}
+	
 	#forsale img, #residents img {
 		width: 250px;
 		border-radius: 7px;
@@ -458,6 +483,8 @@ footer p {
 	#residents .jumbotron {
 		border-radius: 0;
 		margin-bottom: 0;
+		padding-top: 50px;
+		padding-bottom: 50px;
 	}
 	
 }
