--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ header .navbar-brand span.subhead {
 	position: relative;
     overflow: hidden;
     width:100vw;
-    height:33vh;
+    height:43vh;
     max-height:33vh;
 }
 
@@ -265,6 +265,19 @@ header .inbody .navbar-brand span.subhead {
 	margin: 30px;
 }
 
+p {
+	margin: 0 0 15px;
+}
+
+a {
+	color: #F7534B;
+}
+
+a:hover {
+	text-decoration: none;
+	color: #E6463D;
+}
+
 .btn {
 	margin: 20px;
 }
@@ -279,18 +292,47 @@ header .inbody .navbar-brand span.subhead {
     border-color: transparent;
 }
 
-/** Page: About **/
-#about {
-	background-color: #FFF0B8;
-/* 	background-image: linear-gradient(to bottom, #EEF08A, #819A2D); */
-	border-top: 20px solid #F7534B;
-}
-
 .shadow {
   -moz-box-shadow:    0 0 21px 2px #ccc;
   -webkit-box-shadow: 0 0 21px 2px #ccc;
   box-shadow:         0 0 21px 2px #ccc;
 }
+
+
+
+/** Page: About **/
+#about {
+	background-color: #8BC34A;
+/* 	background-image: linear-gradient(to bottom, #EEF08A, #819A2D); */
+	border-top: 20px solid #689F38;
+/* 	padding: 120px 0; */
+	padding: 0;
+}
+
+#about .row {
+	margin-left: 40px;
+}
+
+#about h2 {
+	text-align: left;
+	margin: 50px 0 15px 0; 
+}
+
+/* #about img {
+	border-radius: 10px;
+	width: 100%;
+} */
+
+#about img {
+	float:right;
+  	-webkit-clip-path: polygon(50% 0, 0% 100%, 100% 100%, 100% 0);
+	clip-path: polygon(50% 0, 0% 100%, 100% 100%, 100% 0);
+	clip-path: url("#clip-shape");	
+ 	shape-outside: polygon(50% 0, 0% 100%, 100% 100%, 100% 0);
+	margin-right: -100px;
+	height:500px;
+}
+
 
 
 /** Page: Nearby **/
@@ -447,6 +489,31 @@ footer p {
 
 @media (max-width: 992px) {
 	
+ 	#about {
+		padding: 0 0 50px 0;
+	} 
+	
+	#about img {
+	    -webkit-clip-path: polygon(0 0, 0 50%, 100% 70%, 100% 0);
+		clip-path: polygon(0 0, 0 50%, 100% 70%, 100% 0);
+		shape-outside: polygon(0 0, 0 50%, 100% 70%, 100% 0);
+		float: right;
+		display: block;
+		width: 100%;
+		height: auto;
+		margin: 0;
+		margin-bottom: 20px;
+	}
+	
+	#about .row {
+		margin-left: -15px;
+	}
+	
+	#about h2, #about p {
+		margin-left: 40px;
+		margin-right: 40px;
+	}
+	
 	#forsale img, #residents img {
 		width: 400px;
 		border-radius: 7px;
@@ -467,6 +534,10 @@ footer p {
 	.page {
 		padding: 50px 0;
 	}
+	
+	#about img {
+		
+	} 
 	
 	#forsale img, #residents img {
 		width: 250px;
