--- a/css/style.css
+++ b/css/style.css
@@ -95,8 +95,8 @@ header .navbar-brand span.subhead {
 	position: relative;
     overflow: hidden;
     width:100vw;
-    height:43vh;
-    max-height:33vh;
+    height:45vh;
+    max-height:45vh;
 }
 
 .video-container {
@@ -286,7 +286,7 @@ a:hover {
 	background-color: #F7534B;
 	border-color: transparent;
 }
-.btn-primary:hover {
+.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary:active:hover {
     color: #fff;
     background-color: #E6463D;
     border-color: transparent;
@@ -302,37 +302,12 @@ a:hover {
 
 /** Page: About **/
 #about {
-	background-color: #8BC34A;
+	background-color: #E1FFBE;
 /* 	background-image: linear-gradient(to bottom, #EEF08A, #819A2D); */
-	border-top: 20px solid #689F38;
-/* 	padding: 120px 0; */
-	padding: 0;
+	border-top: 20px solid #F7534B;
+	padding: 70px 0;
+
 }
-
-#about .row {
-	margin-left: 40px;
-}
-
-#about h2 {
-	text-align: left;
-	margin: 50px 0 15px 0; 
-}
-
-/* #about img {
-	border-radius: 10px;
-	width: 100%;
-} */
-
-#about img {
-	float:right;
-  	-webkit-clip-path: polygon(50% 0, 0% 100%, 100% 100%, 100% 0);
-	clip-path: polygon(50% 0, 0% 100%, 100% 100%, 100% 0);
-	clip-path: url("#clip-shape");	
- 	shape-outside: polygon(50% 0, 0% 100%, 100% 100%, 100% 0);
-	margin-right: -100px;
-	height:500px;
-}
-
 
 
 /** Page: Nearby **/
@@ -377,6 +352,16 @@ a:hover {
 }
 
 #locations-list {
+	height: 250px;
+    overflow: scroll;
+    border-bottom: 1px solid #CECECE;
+    padding-top: 15px;
+    padding-bottom: 0;
+    border-top: 1px solid #cecece;
+	background-color: #F7F7F7;
+}
+
+#locations-list ul {
 	list-style: upper-alpha;
 }
 
@@ -476,7 +461,7 @@ footer p {
 	}
 }
 
-@media (max-width:827px) {
+@media (max-width:856px) {
 	header .navbar-brand h1 {
 		font-size: 1.1em;
 	}
@@ -488,31 +473,6 @@ footer p {
 }
 
 @media (max-width: 992px) {
-	
- 	#about {
-		padding: 0 0 50px 0;
-	} 
-	
-	#about img {
-	    -webkit-clip-path: polygon(0 0, 0 50%, 100% 70%, 100% 0);
-		clip-path: polygon(0 0, 0 50%, 100% 70%, 100% 0);
-		shape-outside: polygon(0 0, 0 50%, 100% 70%, 100% 0);
-		float: right;
-		display: block;
-		width: 100%;
-		height: auto;
-		margin: 0;
-		margin-bottom: 20px;
-	}
-	
-	#about .row {
-		margin-left: -15px;
-	}
-	
-	#about h2, #about p {
-		margin-left: 40px;
-		margin-right: 40px;
-	}
 	
 	#forsale img, #residents img {
 		width: 400px;
@@ -534,10 +494,6 @@ footer p {
 	.page {
 		padding: 50px 0;
 	}
-	
-	#about img {
-		
-	} 
 	
 	#forsale img, #residents img {
 		width: 250px;
