--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,7 @@ video {
 		display:none;
 	}
 	.video-container {
-		background: url(../images/carousel-woods.jpg) #000 no-repeat center 100%;
+		background: url(../images/woods.jpg) #000 no-repeat center 100%;
 		background-size: cover;
 	}
 }
@@ -416,7 +416,7 @@ footer a:hover {
 /** Page: Residents **/
 
 #residents {
-	background-image: url("../images/carousel-woods.jpg");
+	background-image: url("../images/woods.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
 }
