--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,8 @@ header .navbar-brand span.subhead {
     width:200%;
     left:-50%;
 	z-index: -1;
+	background: url(../images/woods.jpg) center center no-repeat;
+	background-size: cover;
 }
 
 video {
